notebooks finished for re-creating all plots in paper

--- a/python/notebooks/BUG_paper_appendix_B.ipynb
+++ b/python/notebooks/BUG_paper_appendix_B.ipynb
@@ -29,10 +29,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
-    "from matplotlib import style\n",
-    "plt.style.use('fivethirtyeight')\n",
-    "%matplotlib inline"
+    "\n",
+    "%matplotlib inline\n",
+    "plt.style.use('fivethirtyeight')"
    ]
   },
   {
@@ -200,15 +201,13 @@
    "id": "742d4413",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a964a3cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',\n",
+    "                           header=1, usecols=['Peak month', 'Trough month'],) \n",
+    "starts =  pd.to_datetime(df['Peak month'])\n",
+    "\n",
+    "ends = pd.to_datetime(df['Trough month'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -223,7 +222,8 @@
    "id": "20890567",
    "metadata": {},
    "source": [
-    "## Appendix B: Job-related rates"
+    "# Appendix B: \n",
+    "## Job-finding and job-separation rates"
    ]
   },
   {
@@ -231,7 +231,6 @@
    "id": "25ab0a25",
    "metadata": {},
    "source": [
-    "\n",
     "### Job-finding rate\n",
     "Call the function `bug.compute_job_finding_rate()` with arguments:\n",
     "  * unemployment level, required\n",
@@ -288,10 +287,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = find_rate_q.plot(figsize=(9,7), linewidth=1, label='Quarterly')\n",
-    "find_rate_m.plot(ax=ax, linewidth=1, label='Monthly')\n",
+    "ax = find_rate_q[:-1].plot(figsize=(9,7), linewidth=1.5, label='Quarterly (python output)')\n",
+    "find_rate_m[:-1].plot(ax=ax, linewidth=1.5, label='Monthly (python output)')\n",
+    "\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
+    "\n",
+    "plt.ylim(0, find_rate_q.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "\n",
+    "ax.grid(axis='x')\n",
     "plt.ylabel('Job-finding rate', fontsize=13)\n",
-    "plt.legend(fontsize=12)"
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python Outputs', fontsize=14)"
    ]
   },
   {
@@ -301,7 +313,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_data = read.excel('../')"
+    "fig_A1 = pd.read_excel('../../figures/xlsx/figureA1.xlsx', header=1, usecols=['Quarterly job-finding rate']) \n",
+    "fig_A1.set_index(find_rate_q.index[:-1], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5170678",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_rate_q =  bug.compute_job_finding_rate(unempl_level, ushort_level, True, True)"
    ]
   },
   {
@@ -310,7 +333,25 @@
    "id": "e2d383fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ax = fig_A1.rename(columns={'Quarterly job-finding rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
+    "                linewidth=5, color='k', alpha=.8,)\n",
+    "find_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
+    "\n",
+    "ax.grid(axis='x')\n",
+    "plt.ylim(0, find_rate_q.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1.5)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "\n",
+    "plt.ylabel('Job-finding rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+   ]
   },
   {
    "cell_type": "code",
@@ -318,7 +359,10 @@
    "id": "6b5bf443",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.scatter(x=fig_A1, y=find_rate_q[:-1])\n",
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+   ]
   },
   {
    "cell_type": "code",
@@ -329,12 +373,18 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "375578df",
+   "cell_type": "markdown",
+   "id": "a5041c79",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Job-separation rate\n",
+    "Call the function `bug.compute_job_separation_rate()` with arguments:\n",
+    "  * unemployment level, required\n",
+    "  * short-term unemployment level, required\n",
+    "  * labor force level, required\n",
+    "  * True/False for whether to convert monthly to quarterly, optional; default is True\n",
+    "  * True/False for whether to adjust the short-term level after 1994, as in Shimer (2012), optional; default is True\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -342,15 +392,19 @@
    "id": "678733e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sep_rate_q = bug.compute_job_separation_rate(unempl_level, ushort_level, labor_level, True, True)\n",
+    "sep_rate_m = bug.compute_job_separation_rate(unempl_level, ushort_level, labor_level, False, True)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79975615",
+   "cell_type": "markdown",
+   "id": "3cfeea7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Re-create figure A2\n",
+    "Job-separation rate in the US, 1951-2019"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,67 +412,262 @@
    "id": "515c70d1",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab52a1b1",
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "ax = sep_rate_q[:-1].plot(figsize=(9,7), linewidth=1.5, label='Quarterly (python output)')\n",
+    "sep_rate_m[:-1].plot(ax=ax, linewidth=1.5, label='Monthly (python output)')\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
     "\n",
-    "def job_sep_eqn(lambda_rate, *consts):\n",
-    "    find_rate, u_level, u_level_next, h_level = consts\n",
-    "    expr = (1. - np.exp(-(find_rate+lambda_rate))) * lambda_rate/(find_rate+lambda_rate) * h_level + np.exp(-(find_rate+lambda_rate)) * u_level - u_level_next  \n",
-    "    \n",
-    "    return expr \n"
+    "plt.ylim(0, sep_rate_q.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1.5)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "ax.grid(axis='x')\n",
+    "plt.ylabel('Job-separation rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python Outputs', fontsize=14)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6548cc63",
+   "id": "1b9f6297",
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution = root(job_sep_eqn, 0, (find_rate, u_level, u_level_next, h_level))"
+    "fig_A2 = pd.read_excel('../../figures/xlsx/figureA2.xlsx', header=1, usecols=['Quarterly job-separation rate']) \n",
+    "fig_A2.set_index(sep_rate_q.index[:-1], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e4d1ef",
+   "id": "de84e0e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution.x"
+    "sep_rate_q = bug.compute_job_separation_rate(unempl_level, ushort_level, labor_level, True,True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565bba74",
+   "id": "19b1c2d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda_rate = [root(job_sep_eqn, 0, (find_rate.loc[t], unempl_level.loc[t], unempl_level.loc[t+1], labor_level.loc[t])).x[0] for t in find_rate.index[:-1]]    "
+    "ax = fig_A2.rename(columns={'Quarterly job-separation rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
+    "                                    linewidth=5, color='k', alpha=.8 )\n",
+    "sep_rate_q[:-1].plot(ax=ax, linewidth=2, label='Quarterly (python output)')\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
+    "\n",
+    "ax.grid(axis='x')\n",
+    "plt.ylim(0, sep_rate_q.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1.5)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "plt.ylabel('Job-separation rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b935f5",
+   "id": "e5ac2184",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda_rate"
+    "plt.scatter(x=fig_A2, y=sep_rate_q[:-1])\n",
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f19d3e2",
+   "metadata": {},
+   "source": [
+    "#### Re-create figure A3\n",
+    "Beveridgean unemployment rate vs. actual unemployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc7730a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bev_unempl = bug.compute_beveridgean_unemployment(find_rate_q, sep_rate_q)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc55e64b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bev_unempl.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e931721a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unempl_q = unempl_rate.resample('Q').mean()/100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fc6cbab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = unempl_q[1:].plot(figsize=(9,7), linewidth=4, color='m', alpha=.8,\n",
+    "                    label='actual unemployemnt')\n",
+    "bev_unempl[:-1].plot(ax=ax, linewidth=1.5, label='beveridgean (python output)')\n",
+    "\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
+    "\n",
+    "ax.grid(axis='x')\n",
+    "plt.ylim(0, unempl_q.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1.5)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "\n",
+    "plt.ylabel('Unemployment rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python Output vs Actual (quarterly)', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b795b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_A3 = pd.read_excel('../../figures/xlsx/figureA3.xlsx', header=1, \n",
+    "                       usecols=['Beveridgean unemployment rate']) \n",
+    "fig_A3.set_index(sep_rate_q.index[:-1], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91747e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = fig_A3.rename(columns={'Beveridgean unemployment rate': 'Beveridgean (matlab output)'}).plot(figsize=(9,7), \n",
+    "                linewidth=3, color='k', )\n",
+    "bev_unempl[:-1].plot(ax=ax, linewidth=1, label='Beveridgean (python output)')\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5, zorder=-100)\n",
+    "\n",
+    "ax.grid(axis='x')\n",
+    "plt.ylim(0, unempl_q.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1.5)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "plt.ylabel('unemployement rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d8a757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(x=fig_A3, y=bev_unempl[:-1])\n",
+    "plt.title('Python vs MATLAB Outputs', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97ccead6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe29f5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bev_unempl_m = bug.compute_beveridgean_unemployment(find_rate_m, sep_rate_m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee0c3d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unempl_m = unempl_rate/100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c76bfd4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ax = bev_unempl_m[:-1].plot(linewidth=3.5, figsize=(9,7),label='beveridgean (python output)')\n",
+    "ax = unempl_m[1:].plot( ax=ax, linewidth=2, color='m', \n",
+    "                     label='actual unemployemnt')\n",
+    "\n",
+    "for idx, s in enumerate(starts):\n",
+    "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
+    "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5, zorder=-100)\n",
+    "\n",
+    "ax.grid(axis='x')\n",
+    "plt.ylim(0, unempl_m.max()*1.1)\n",
+    "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
+    "ax.spines[\"bottom\"].set_color('k')\n",
+    "ax.spines[\"left\"].set_linewidth(1.5)\n",
+    "ax.spines[\"left\"].set_color('k')\n",
+    "plt.ylabel('Unemployment rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Python Output vs Actual (monthly)', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a567e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1e44deb",
    "metadata": {},
    "outputs": [],
    "source": []
