notebooks all run

--- a/python/notebooks/BUG_paper_appendix_C-D.ipynb
+++ b/python/notebooks/BUG_paper_appendix_C-D.ipynb
@@ -429,7 +429,7 @@
    "outputs": [],
    "source": [
     "ax= u_hosios.plot(color='darkorange', linewidth=2, figsize=(9, 6), label=\"Hosios\" )\n",
-    "ustar_endo.plot(color='magenta', linewidth=2,  label=\"Bev Endogenous\")\n",
+    "ustar_endo.plot(color='magenta', linewidth=2,  label=\"Endogenous\")\n",
     "\n",
     "plt.legend()\n",
     "for idx, s in enumerate(starts):\n",
