--- a/python/notebooks/BUG_paper_sec5-7_appE.ipynb
+++ b/python/notebooks/BUG_paper_sec5-7_appE.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import statsmodels.tsa.filters.hp_filter as hp"
    ]
   },
   {
@@ -602,9 +603,7 @@
    "id": "50bcb144",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import statsmodels.tsa.filters.hp_filter as hp"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -692,7 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u_const.plot(linewidth=3, color='magenta',figsize=(9, 6),label='Const social value')\n",
+    "ax = u_const.plot(linewidth=2, color='magenta',figsize=(9, 6),label='Const social value')\n",
     "u_fluct.plot(color='darkblue', linewidth=3, linestyle='dotted', label='Fluct social value')\n",
     "\n",
     "for idx, s in enumerate(starts):\n",
@@ -714,6 +713,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29d5ed83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(u_const, u_fluct)\n",
+    "plt.title(\"Const vs Fluct value of nonwork\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "866e4977",
    "metadata": {},
    "outputs": [],
    "source": []
