--- a/python/notebooks/BUG_paper_section_5.ipynb
+++ b/python/notebooks/BUG_paper_section_5.ipynb
@@ -424,7 +424,7 @@
    "source": [
     "for idx, b in enumerate(est_bkps[:-1]):\n",
     "\n",
-    "    plt.figure(figsize = (8,8))\n",
+    "    plt.figure(figsize = (6,6))\n",
     "    plt.plot(log_u_q, log_v_q, linewidth=1, color='grey')\n",
     "    plt.plot(log_u_q.iloc[est_bkps[idx]:est_bkps[idx+1]],log_v_q.iloc[est_bkps[idx]:est_bkps[idx+1]], \n",
     "             linewidth=3, color='teal')\n",
@@ -693,6 +693,10 @@
    "source": [
     "ax = unepl_gap.plot(color='navy', linewidth=2, figsize=(9, 6), label='unemployment gap')\n",
     "plt.axhline(y=0, color='magenta', linewidth=2,)\n",
+    "plt.fill_between(unepl_gap.index, 0, [min(0,g) for g in unepl_gap],color='magenta', alpha=.2)\n",
+    "plt.fill_between(unepl_gap.index, 0, [max(0,g) for g in unepl_gap],color='navy', alpha=.2)\n",
+    "\n",
+    "\n",
     "plt.legend()\n",
     "for idx, s in enumerate(starts):\n",
     "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
