--- a/python/notebooks/BUG_paper_appendix_B.ipynb
+++ b/python/notebooks/BUG_paper_appendix_B.ipynb
@@ -252,26 +252,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f6b685f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_rate_q.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9dc3f976",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_rate_q.tail()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a5902228",
    "metadata": {},
@@ -335,7 +315,7 @@
    "outputs": [],
    "source": [
     "ax = fig_A1.rename(columns={'Quarterly job-finding rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
-    "                linewidth=5, color='k', alpha=.8,)\n",
+    "                linewidth=3, color='k', linestyle='dotted',)\n",
     "find_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
     "for idx, s in enumerate(starts):\n",
     "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
@@ -459,8 +439,8 @@
    "outputs": [],
    "source": [
     "ax = fig_A2.rename(columns={'Quarterly job-separation rate': 'Quarterly (matlab output)'}).plot(figsize=(9,7), \n",
-    "                                    linewidth=5, color='k', alpha=.8 )\n",
-    "sep_rate_q[:-1].plot(ax=ax, linewidth=2, label='Quarterly (python output)')\n",
+    "                                    linewidth=3, linestyle='dotted', color='k', alpha=.8 )\n",
+    "sep_rate_q[:-1].plot(ax=ax, linewidth=1.5, label='Quarterly (python output)')\n",
     "for idx, s in enumerate(starts):\n",
     "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
     "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5,zorder=-100)\n",
@@ -533,8 +513,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = unempl_q[1:].plot(figsize=(9,7), linewidth=4, color='m', alpha=.8,\n",
-    "                    label='actual unemployemnt')\n",
+    "ax = unempl_q[1:].plot(figsize=(9,7), linewidth=3, color='m', alpha=.8,\n",
+    "                    label='actual unemployemnt', linestyle='dotted')\n",
     "bev_unempl[:-1].plot(ax=ax, linewidth=1.5, label='beveridgean (python output)')\n",
     "\n",
     "for idx, s in enumerate(starts):\n",
@@ -573,8 +553,8 @@
    "outputs": [],
    "source": [
     "ax = fig_A3.rename(columns={'Beveridgean unemployment rate': 'Beveridgean (matlab output)'}).plot(figsize=(9,7), \n",
-    "                linewidth=3, color='k', )\n",
-    "bev_unempl[:-1].plot(ax=ax, linewidth=1, label='Beveridgean (python output)')\n",
+    "                linewidth=3, color='k', linestyle='dotted')\n",
+    "bev_unempl[:-1].plot(ax=ax, linewidth=1.5, label='Beveridgean (python output)')\n",
     "for idx, s in enumerate(starts):\n",
     "    if starts.loc[idx] > pd.to_datetime('1951-1'):\n",
     "        plt.axvspan(starts.loc[idx], ends.loc[idx], facecolor='grey', alpha=0.5, zorder=-100)\n",
@@ -637,7 +617,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ax = bev_unempl_m[:-1].plot(linewidth=3.5, figsize=(9,7),label='beveridgean (python output)')\n",
+    "ax = bev_unempl_m[:-1].plot(linewidth=3, figsize=(9,7),label='beveridgean (python output)')\n",
     "ax = unempl_m[1:].plot( ax=ax, linewidth=2, color='m', \n",
     "                     label='actual unemployemnt')\n",
     "\n",
